--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "dev": "nodemon src/main.js"
   },
   "dependencies": {
-    "bcryptjs": "2.4.3",
+    "bcryptjs": "^2.4.3",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.18.3",
+    "express-response-helper": "^1.3.1",
     "figlet": "1.7.0",
     "helmet": "7.1.0",
-    "jose": "5.2.2",
+    "jose": "^5.2.3",
     "mongoose": "8.2.1",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
