--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/main.js"
+    "dev": "clear && nodemon src/main.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
