--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PORT_SERVER = 3000
-HOST_SERVER = http://localhost
-HOST_DB = mongodb://localhost
-PORT_DB = 27017
-NAME_DB = vars
+PORT_SERVER=3001
+HOST_SERVER=http://0.0.0.0
+HOST_DB =mongodb://localhost
+PORT_DB=27017
+NAME_DB="vars"
+PROJECT_NAME="vars"
