--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev:local": "clear && nodemon src/main.js",
+    "dev:local": "nodemon src/main.js",
     "start": "node src/main.js"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "mongoose": "8.2.1",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.0",
     "winston": "3.12.0",
